# SpringheadOld

./: .gitignore  .gitmodules  README.md
core/embed/SprPythonDLL/: CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  SprPythonDLL.cpp  SprPythonDLL14.0.sln  SprPythonDLL14.0.vcxproj  SprPythonDLL15.0.sln  SprPythonDLL15.0.vcxproj
core/src/: CMake.README  CMakeConf.txt.dist  CMakeCustomize.txt.sample  CMakeCustomize.txt.test  CMakeLists.txt  CMakeLists.txt.App.dist  CMakeLists.txt.Dev.dist  CMakeLists.txt.Lib.dist  CMakeLists.txt.dist  CMakeLists_customize.txt.sample  CMakeOpts.txt.dist  CMakeSettings.txt.App.dist  CMakeSettings.txt.Lib.dist  CMakeSettings.txt.dist  CMakeTopdir.txt.dist  DailyBuildMacros.props  DelAll.bat  GUID_check.py  Makefile  SlnConv.bat  SlnConv.py  Springhead14.0.sln  Springhead14.0.vcxproj  Springhead15.0.sln  Springhead15.0.vcxproj  SpringheadImpDoc.bat  SpringheadImpDoc.py  SpringheadLib.bat  SpringheadLib.sh  SpringheadMacros.props  TempDoc.bat  cmake_ln.py  cmake_preconfig.py  cmake_sync.py  dailybuild.CMakeConf.txt  dailybuild.CMakeTopdir.txt  dailybuild.CMakeTopdir.txt.unix  dailybuild.control  do_python.bat  example-list.txt  (+3 more)
core/src/Base/: Affine.cpp  Base.doxy  Base.h  Base14.0.vcxproj  Base14.0.vcxproj.filters  Base15.0.vcxproj  BaseDebug.cpp  BaseDoc.bat  BaseTypeInfo.cpp  BaseUtility.cpp  CMakeLists.txt  CMakeSettings.txt  Combination.h  KeyList.h  Makefile  MatrixPack.bat  RingBuf.h  StrBufBase.h  StrbufBase.cpp
core/src/Collision/: CDBox.cpp  CDBox.h  CDCapsule.cpp  CDCapsule.h  CDCollisionFunctions.h  CDConvex.cpp  CDConvex.h  CDConvexMesh.cpp  CDConvexMesh.h  CDConvexMeshInterpolate.cpp  CDConvexMeshInterpolate.h  CDCutRing.cpp  CDCutRing.h  CDDetectorImp.cpp  CDDetectorImp.h  CDEllipsoid.cpp  CDEllipsoid.h  CDGJK.cpp  CDQuickHull2D.h  CDQuickHull2DImp.h  CDQuickHull3D.h  CDQuickHull3DImp.h  CDRegisterTypeDesc.cpp  CDRoundCone.cpp  CDRoundCone.h  CDShape.cpp  CDShape.h  CDSpatialHashTable.h  CDSphere.cpp  CDSphere.h  CMakeAddOpts.txt  CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  Collision.doxy  Collision.h  Collision14.0.vcxproj  Collision14.0.vcxproj.filters  Collision15.0.vcxproj  CollisionDoc.bat  (+4 more)
core/src/Creature/: CMakeAddOpts.txt  CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  CRBody.cpp  CRBody.h  CRBone.cpp  CRBone.h  CRCreature.cpp  CRCreature.h  CREngine.cpp  CREngine.h  CRGazeController.cpp  CRGazeController.h  CRGrabController.cpp  CRGrabController.h  CRMinimumJerkTrajectory.cpp  CRMinimumJerkTrajectory.h  CRMinimumTorqueChangePlanner.cpp  CRMinimumTorqueChangePlanner.h  CRMotionController.cpp  CRMotionController.h  CRMotionPlanner.cpp  CRMotionPlanner.h  CRReachController.cpp  CRReachController.h  CRRegisterTypeDesc.cpp  CRSdk.cpp  CRSdk.h  CRTouchSensor.cpp  CRTouchSensor.h  CRTrajectoryPlanner.cpp  CRTrajectoryPlanner.h  CRVisualSensor.cpp  CRVisualSensor.h  Creature14.0.vcxproj  Creature14.0.vcxproj.filters  Creature15.0.vcxproj  Makefile  ReadMe.txt  (+3 more)
core/src/EmbPython/: Base.i  CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  Collision.i  Creature.i  EPInterpreter.cpp  EPUtility.cpp  EPUtility.h  EmbPython.mak.txt  EmbPython14.0.sln  EmbPython14.0.vcxproj  EmbPython14.0.vcxproj.filters  EmbPython15.0.sln  EmbPython15.0.vcxproj  EmbPythonSwig.bat  EmbPythonSwig.py  EmbPython_RunSwig14.0.vcxproj  EmbPython_RunSwig14.0.vcxproj.filters  EmbPython_RunSwig15.0.vcxproj  EmbPython_clean.bat  EmbPython_clean.py  EmbPython_clean.py-OBSOLETED  FileIO.i  Foundation.i  Framework.i  Graphics.i  HumanInterface.i  Physics.i  RunSwig.bat  RunSwig_EmbPython.bat  RunSwig_EmbPython.py  SprPythonDLL.cpp  SprPythonDLL14.0.sln  SprPythonDLL14.0.vcxproj  SprPythonDLL15.0.sln  SprPythonDLL15.0.vcxproj  SwigTest.bat  half_cheetah.bat  half_cheetah_test.py  (+2 more)
core/src/FileIO/: CMakeAddOpts.txt  CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  FIFile.cpp  FIFile.h  FIFileBinary.cpp  FIFileBinary.h  FIFileCOLLADA.cpp  FIFileCOLLADA.h  FIFileCOLLADAHandler.h  FIFileSpr.cpp  FIFileSpr.h  FIFileVrml.cpp  FIFileVrml.h  FIFileX.cpp  FIFileX.h  FIImport.cpp  FIImport.h  FILoadContext.cpp  FILoadContext.h  FIOpStateHandler.cpp  FIOpStateHandler.h  FIRegisterTypeDesc.cpp  FISaveContext.cpp  FISaveContext.h  FISdk.cpp  FISdk.h  FISpirit.cpp  FISpirit.h  FileIO.h  FileIO14.0.vcxproj  FileIO14.0.vcxproj.filters  FileIO15.0.vcxproj  Makefile  RunSwig_gen_files.txt
core/src/Foundation/: CMakeAddOpts.txt  CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  ClapackLibsDef.h  Foundation.doxy  Foundation.h  Foundation14.0.vcxproj  Foundation14.0.vcxproj.filters  Foundation15.0.vcxproj  FoundationDoc.bat  Makefile  Object.cpp  Object.h  QuadProg++.cc  QuadProg++.hh  RunSwig.py  RunSwig_gen_files.txt  Scene.cpp  Scene.h  Scilab.i  ScilabStub.cpp  ScilabStubImpl.cxx  ScilabStubImpl.cxx.org  ScilabSwig.py  SwigTest.bat  UTBaseType.h  UTClapack.h  UTCriticalSection.cpp  UTDllLoader.cpp  UTDllLoader.h  UTDllLoaderImpl.h  UTLoadContext.cpp  UTLoadContext.h  UTLoadHandler.cpp  UTLoadHandler.h  UTMMTimer.cpp__  UTMMTimer.h  UTOptimizer.cpp  UTOptimizer.h  (+14 more)
core/src/Framework/: CMakeAddOpts.txt  CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  FWApp.cpp  FWConsoleDebugMonitor.cpp  FWEditor.cpp  FWFemMesh.cpp  FWFemMesh.h  FWFemMeshNew.cpp  FWFemMeshNew.h  FWGLUI.cpp  FWGLUI.h  FWGLUT.cpp  FWGLUT.h  FWGraphicsHandler.h  FWHapticPointer.cpp  FWHapticPointer.h  FWOPHapticHandler.cpp  FWObject.cpp  FWObject.h  FWOldSpringheadNode.h  FWOldSpringheadNodeHandler.cpp  FWOldSpringheadNodeHandler.h  FWOpHapticHandler.h  FWOpObj.cpp  FWOpObj.h  FWOptimizer.cpp  FWOptimizer.h  FWRegisterTypeDesc.cpp  FWScene.cpp  FWScene.h  FWSdk.cpp  FWSdk.h  FWSkeletonSensor.cpp  FWSkeletonSensor.h  FWSprTetgen.cpp  FWSprTetgen.h  FWStaticTorqueOptimizer.cpp  FWStaticTorqueOptimizer.h  (+13 more)
core/src/Graphics/: CMakeLists.txt  CMakeOpts.txt  CMakeSettings.txt  GRBlendMesh.cpp  GRBlendMesh.h  GRDeviceGL.cpp  GRDeviceGL.h  GRDrawEllipsoid.h  GRFrame.cpp  GRFrame.h  GRLoadBmp.cpp  GRLoadBmp.h  GRMesh.cpp  GRMesh.h  GRRegisterTypeDesc.cpp  GRRender.cpp  GRRender.h  GRScene.cpp  GRScene.h  GRSdk.cpp  (+13 more)
(+2081 files in other folders)
